2008-03-03  Luca Ferretti  <elle.uca@libero.it>

	* daemon/gvfsbackendftp.c: (do_query_info):
	Make "file don't exist" message conform to other backends;
	no, it isn't a string freeze break, the message yet exists
	elsewhere.

2008-03-02  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_filename_construct):
	use g_build_path() to not get excess slashes in paths

2008-03-02  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (ftp_connection_try_cd), (process_line),
	(do_query_info), (do_move), (g_vfs_backend_ftp_class_init):
	implement move vfunc

2008-03-02  Carlos Garcia Campos  <carlosgc@gnome.org>

	* common/gmountsource.c: (ask_password_reply):
	Treat DBus output paramaters that contain "" as NULL. It fixes the
	sftp backend when a username is provided by the user.
	
2008-03-02  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_open_for_read), (do_start_write),
	(do_make_directory):
	push back connection if we fail starting a read/write

2008-03-02  Benjamin Otte  <otte@gnome.org>

	* client/gvfsuriutils.c: (g_vfs_decode_uri):
	don't pass the [] when parsing IPv6 addresses

2008-03-02  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_make_directory),
	(g_vfs_backend_ftp_class_init):
	implement make_directory

2008-03-02  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_delete),
	(g_vfs_backend_ftp_class_init):
	implement delete

2008-03-02  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	redo error handling: We now store the error and the job in the
	FtpConnection. This way we don't have to handle errors in the outer
	functions and can just "if (conn->error) return FALSE;" in the inner
	functions.

2008-03-01  David Zeuthen  <davidz@redhat.com>

	* daemon/gvfsbackendcdda.c (do_mount): Avoid calling
	cddio_cddap_close() twice on an error path.

2008-03-01  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (run_list_command):